--- a/gui/src/styles.css
+++ b/gui/src/styles.css
@@ -1,10 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
 html.body{
   font-family: 'Roboto', 'sans-serif';
-  height: 100% !important;
+  height: 100%;
 
 }
 
 body{
   margin: 0;
 }
+
+
+
