--- a/gui/src/app/view/support/support.component.html
+++ b/gui/src/app/view/support/support.component.html
@@ -4,6 +4,7 @@
 
 
 
+<mat-card class="faq-card">
 
 
 <mat-accordion>
@@ -50,4 +51,47 @@ How do we prevent SQL Injection in our applications?
     </mat-expansion-panel>
 
 
+    <mat-expansion-panel>
+    <mat-expansion-panel-header>
+    <mat-panel-title>
+      How can I prevent XSS?
+    </mat-panel-title>
+    </mat-expansion-panel-header>
+    <p>XSS can be prevented while coding the application.
+       You should be validating all input and output to and from the application and
+        escape all special characters that may be used in a script.
+         If the code replaces the special characters by the following
+         before displaying the output, XSS can be prevented to some extent.</p>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+        <mat-panel-title>
+          How can I prevent XSS?
+        </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>XSS can be prevented while coding the application.
+           You should be validating all input and output to and from the application and
+            escape all special characters that may be used in a script.
+             If the code replaces the special characters by the following
+             before displaying the output, XSS can be prevented to some extent.</p>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+            <mat-panel-title>
+                What are these W3C logs?
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>W3C is a logging format used for Web server log files.
+               W3C logs record access details of each request: the timestamp,
+               source IP, page requested, the method used, http protocol version,
+                browser type, the referrer page, the response code etc. Note that these are access logs,
+                 and so a separate record is maintained for each request.
+                  When a page with multiple gif files is downloaded,
+                   it would be recorded as multiple entries in the W3C log;
+               so, W3C logs tend to be voluminous</p>
+            </mat-expansion-panel>
+
 </mat-accordion>
+</mat-card>
