constructed the profile component

--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -2,19 +2,11 @@
     <div><button mat-icon-button>
 <img src="/assets/img/OWASP-Logo-White.png" width=60 alt="OWASP LOGO">
     </button></div>
-    <span style="width: 5%"></span>
+    <span style="width: 2%"></span>
   <div>Risk Assessment Framework</div>
-    <!-- <div>
-      <a routerLink="home">Home</a>
-      <a routerLink="tools">Tools</a>
-      <a routerLink="history">History</a>
-      <a routerLink="profile">Profile</a>
-      <a routerLink="resources">Resources</a>
-      <a routerLink="settings">Settings</a>
-      <a routerLink="support">Support</a>
-    </div> -->
+
   </mat-toolbar>
-<mat-drawer-container class="example-container" hasBackdrop="false">
+<mat-drawer-container hasBackdrop="false">
     <mat-drawer  opened="true" mode="push" true >
         <mat-nav-list>
 
