added the avatar icon

--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -10,6 +10,9 @@
     <mat-drawer  opened="true" mode="push" true >
         <mat-nav-list>
 
+            <div mat-list-item class="avatarDiv">
+              <mat-icon>security</mat-icon>
+            </div>
             <a mat-list-item routerLink="home"  routerLinkActive="activeLink">
               <mat-icon>dashboard</mat-icon>
               <span class="nav-caption">Home</span></a>
