fixing issues in settings component and profile component

--- a/gui/src/app/view/settings/settings.component.html
+++ b/gui/src/app/view/settings/settings.component.html
@@ -58,6 +58,7 @@
             <input matInput type="password" placeholder="Confirm">
           </mat-form-field>
        </mat-nav-list>
+              <button mat-raised-button style="width: 100%; margin-top: 5%;" color="warn">Confirm</button>
       </mat-card>
     </div>
 
