--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -3,7 +3,7 @@
 <img src="/assets/img/OWASP-Logo-White.png" width=60 alt="OWASP LOGO">
     </button></div>
     <span style="width: 2%"></span>
-  <div>Risk Assessment Framework</div>
+  <div>RISK ASSESSMENT FRAMEWORK</div>
 
   </mat-toolbar>
 <mat-drawer-container hasBackdrop="false">
