initial homepage without the charts

--- a/gui/src/app/view/home/home.component.html
+++ b/gui/src/app/view/home/home.component.html
@@ -1,3 +1,36 @@
-<p>
-  home works!
-</p>
+<div class="header">
+  <h1>Welcome User,</h1>
+  <!-- <mat-divider></mat-divider> -->
+  </div>
+
+  <div class="content">
+    <mat-card class="main-card">
+
+<!-- Line Chart -->
+    </mat-card>
+
+<div class="summary-div">
+<mat-card class="summary-card">
+<!-- Summary of scans -->
+</mat-card>
+<mat-card class="summary-card">
+<!-- Summary of Vulnerabilities Found -->
+</mat-card>
+<mat-card class="summary-card">
+<!-- Summary of Reports -->
+</mat-card>
+</div>
+
+<div  fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="gappx">
+
+
+
+<mat-card class="timeline-card">
+  <!-- Area chart -->
+</mat-card>
+
+<mat-card class="top10-card">
+  <!-- Top 10 chart -->
+</mat-card>
+</div>
+  </div>
