--- a/gui/src/app/view/history/history.component.html
+++ b/gui/src/app/view/history/history.component.html
@@ -1,3 +1,17 @@
-<p>
-  history works!
-</p>
+<div class="header">
+    <h1>History</h1>
+    <mat-divider></mat-divider>
+    </div>
+
+<div class="content">
+    <mat-card class="primary-card">
+
+            <canvas id="lineChart"></canvas>
+  
+    </mat-card>
+
+    <!-- <mat-card class="primary-card" style="margin-top: 0.4em">
+        <mat-card-title>SAST</mat-card-title>
+        <mat-card-subtitle>OWASP TOP 10 VULNERABILITY TEST</mat-card-subtitle>
+           </mat-card> -->
+</div>
