--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -1,3 +1,6 @@
+
+
+
 <mat-toolbar >
     <div><button mat-icon-button>
 <img src="/assets/img/OWASP-Logo-White.png" width=60 alt="OWASP LOGO">
@@ -6,38 +9,8 @@
   <div>RISK ASSESSMENT FRAMEWORK</div>
 
   </mat-toolbar>
-<mat-drawer-container hasBackdrop="false">
-    <mat-drawer  opened="true" mode="push" true >
-        <mat-nav-list>
+  
+  <!-- <app-login *ngIf="!isAuth"></app-login> -->
+  <app-navigation *ngIf="!isAuth"></app-navigation>
+  <router-outlet *ngIf="!isAuth"></router-outlet>
 
-            <div mat-list-item class="avatarDiv">
-              <mat-icon>security</mat-icon>
-            </div>
-            <a mat-list-item routerLink="home"  routerLinkActive="activeLink">
-              <mat-icon>dashboard</mat-icon>
-              <span class="nav-caption">Home</span></a>
-            <a mat-list-item routerLink="tools" routerLinkActive="activeLink">
-              <mat-icon>build</mat-icon>
-              <span class="nav-caption">Tools</span></a>
-            <a mat-list-item routerLink="history" routerLinkActive="activeLink">
-              <mat-icon>access_time</mat-icon>
-              <span class="nav-caption">History</span></a>
-            <a mat-list-item routerLink="profile" routerLinkActive="activeLink">
-              <mat-icon>person</mat-icon>
-              <span class="nav-caption">Profile</span></a>
-            <a mat-list-item routerLink="resources" routerLinkActive="activeLink">
-              <mat-icon>all_inbox</mat-icon>
-              <span class="nav-caption">Resources</span></a>
-            <a mat-list-item routerLink="settings" routerLinkActive="activeLink">
-              <mat-icon>settings</mat-icon>
-              <span class="nav-caption">Settings</span></a>
-            <a mat-list-item routerLink="support" routerLinkActive="activeLink">
-              <mat-icon>help</mat-icon>
-              <span class="nav-caption">Support</span></a>
-         </mat-nav-list>
-
-    </mat-drawer>
-    <mat-drawer-content>
-              <router-outlet></router-outlet>
-    </mat-drawer-content>
-  </mat-drawer-container>
