updated all 25 sans

--- a/gui/src/app/view/resources/resources.component.html
+++ b/gui/src/app/view/resources/resources.component.html
@@ -24,7 +24,7 @@
     </mat-card>
 
 <br>
-<h1>Resources to Help Eliminate The Top 25 Software Errors</h1>
+<h1> SANS TOP 25</h1>
 <mat-divider></mat-divider>
 
     <mat-card class="faq-card">
@@ -43,39 +43,6 @@
     <a (click)="openDialog(1, content)" style="cursor:pointer"><div><h3>Is Your Application Vulnerable ?</h3></div></a>
     <a (click)="openDialog(2, content)" style="cursor:pointer"><div><h3>How to prevent</h3></div></a>
     <a (click)="openDialog(3, content)" style="cursor:pointer"><div><h3>Examples</h3></div></a>
-
-    </mat-expansion-panel>
-    <mat-expansion-panel >
-    <mat-expansion-panel-header>
-    <mat-panel-title> SANS TOP 25 ERRORS </mat-panel-title>
-    </mat-expansion-panel-header>
-<pre>  [1]  CWE- Improper Neutralization of Input During Web Page Generation ('Cross-site Scripting')
-  [2]  CWE- Improper Neutralization of Special Elements used in an SQL Command('SQL Injection')
-  [3]  CWE-Buffer Copy without Checking Size of Input ('Classic Buffer Overflow')
-  [4]  CWE- Cross-Site Request Forgery (CSRF)
-  [5]  CWE- Improper Authorization
-  [6]  CWE- Reliance on Untrusted Inputs in a Security Decision
-  [7]  CWE- Improper Limitation of a Pathname to a Restricted Directory ('Path Traversal')
-  [8]  CWE- Unrestricted Upload of File with Dangerous Type
-  [9]  CWE- Improper Neutralization of Special Elements used in an OS Command ('OS Command Injection')
-  [10] CWE- Missing Encryption of Sensitive Data
-  [11] CWE- Use of Hard-coded Credentials
-  [12] CWE- Buffer Access with Incorrect Length Value
-  [13] CWE- Improper Control of Filename for Include/Require Statement in PHP Program ('PHP File Inclusion')
-  [14] CWE- Improper Validation of Array Index
-  [15] CWE- Improper Check for Unusual or Exceptional Conditions
-  [16] CWE- Information Exposure Through an Error Message
-  [17] CWE- Integer Overflow or Wraparound
-  [18] CWE- Incorrect Calculation of Buffer Size
-  [19] CWE- Missing Authentication for Critical Function
-  [20] CWE- Download of Code Without Integrity Check
-  [21] CWE- Incorrect Permission Assignment for Critical Resource
-  [22] CWE- Allocation of Resources Without Limits or Throttling
-  [23] CWE- URL Redirection to Untrusted Site ('Open Redirect')
-  [24] CWE- Use of a Broken or Risky Cryptographic Algorithm
-  [25] CWE- Concurrent Execution using Shared Resource with Improper Synchronization ('Race Condition') Cross-site scripting and SQL injection a</pre>
-    <br>
-
 
     </mat-expansion-panel>
     </mat-accordion>
