--- a/gui/src/app/view/tools/top10/top10.component.html
+++ b/gui/src/app/view/tools/top10/top10.component.html
@@ -1,6 +1,24 @@
 <div class="upload-wrapper">
+    <h1 style="text-align: center; margin-top: 10%">Drag and Drop your Code</h1>
+    <mat-divider class="divider"></mat-divider>
 
-  <button  color="primary"   mat-raised-button class="upload-button">
+<vaadin-upload ></vaadin-upload>
+
+
+    <h1 style="text-align: center; margin-top: 15%">Enter repository URL</h1>
+    <mat-divider class="divider"></mat-divider>
+
+    <form class="example-form">
+        <mat-form-field style="width: 80%; margin-top : 4%" class="example-full-width">
+          <input  matInput placeholder="URL" [formControl]="emailFormControl">
+          <mat-error *ngIf="emailFormControl.hasError(reg)">
+            Please enter a valid url address
+          </mat-error>
+        </mat-form-field>
+        <button color="primary" mat-raised-button>Upload Repository</button>
+      </form>
+
+  <!-- <button  color="primary"   mat-raised-button class="upload-button">
     Upload Code
     <mat-icon inline=true style="font-size: 5vw; margin-left: 0.4em">cloud_upload</mat-icon>
   </button>
@@ -8,7 +26,7 @@
   <button color="primary" mat-raised-button class="upload-button">
       Upload from Repository
       <mat-icon inline=true style="font-size: 5vw; margin-left: 0.4em">public</mat-icon>
-    </button>
+    </button> -->
 
 </div>
 
