upload front-end backend connect

--- a/gui/src/app/view/tools/top10/top10.component.html
+++ b/gui/src/app/view/tools/top10/top10.component.html
@@ -2,7 +2,7 @@
     <h1 style="text-align: center; margin-top: 10%">Drag and Drop your Code</h1>
     <mat-divider class="divider"></mat-divider>
 
-<vaadin-upload ></vaadin-upload>
+<vaadin-upload target="http://localhost:3000/upload/code" accept=".zip" ></vaadin-upload>
 
 
     <h1 style="text-align: center; margin-top: 15%">Enter repository URL</h1>
