added the result dialog after scan complete

--- a/gui/src/app/view/tools/top10/bottom-sheet-overview-example-sheet.html
+++ b/gui/src/app/view/tools/top10/bottom-sheet-overview-example-sheet.html
@@ -9,8 +9,8 @@
           <span mat-line>Scan Project</span>
         </a>
       
-        <a  mat-list-item (click)="openLink($event)">
-          <span mat-line>Scan Later</span>
+        <a  mat-list-item (click)="openDialog()">
+          <span mat-line>View Results</span>
         </a>
       
         <a mat-list-item (click)="openLink($event)">
