--- a/gui/src/app/view/history/history.component.html
+++ b/gui/src/app/view/history/history.component.html
@@ -1,77 +1,2 @@
-<div class="header">
-    <h1>Analysis</h1>
-    <mat-divider></mat-divider>
-    </div>
-
-<div class="content">
-    <mat-card class="primary-card">
-
-            <canvas id="lineChart"></canvas>
-
-    </mat-card>
-
-    <mat-card class="secondary-card">
-
-      <canvas id="doughnutChart"  height="54"
-      width="80"></canvas>
-
-</mat-card>
-
-     <mat-card class="primary-card">
-
-            <canvas id="barChart"></canvas>
-
-    </mat-card>
-    <mat-card class="secondary-card">
-
-      <canvas id="radarChart"  height="54"
-      width="80"></canvas>
-
-</mat-card>
-
-    <!-- <mat-card class="primary-card" style="margin-top: 0.4em">
-        <mat-card-title>SAST</mat-card-title>
-        <mat-card-subtitle>OWASP TOP 10 VULNERABILITY TEST</mat-card-subtitle>
-           </mat-card> -->
-</div>
-
-<div class="header">
-  <h1>Reports</h1>
-  <mat-divider></mat-divider>
-  </div>
-  <div class="content">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-          <!--- Note that these columns can be defined in any order.
-                The actual rendered columns are set as a property on the row definition" -->
-
-          <!-- Position Column -->
-          <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-          </ng-container>
-
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Month </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-
-          <!-- Weight Column -->
-          <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Issues </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-          </ng-container>
-
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef>  </th>
-            <td mat-cell *matCellDef="let element">   <button color="primary" mat-raised-button class="run-button">Download
-              </button>
-              </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-</div>
+<app-charts></app-charts>
+<app-report></app-report>
