updated analysis-report gui

--- a/gui/src/app/view/tools/top10/analysis-report/analysis-report.component.css
+++ b/gui/src/app/view/tools/top10/analysis-report/analysis-report.component.css
@@ -11,5 +11,8 @@
     background-color: rgba(24, 28, 47, 0.7);
 
     box-sizing: border-box;
+  }
 
+  body{
+    background-color: rgba(24, 28, 47, 0.7);
   }
